--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JIEXI2333</title>
+    <title>YanZeKim</title>
 </head>
 <body>
     <main class="main">
         <header class="header">
             <a class="logo" href="index.html">
-                <h1>JIEXI2333</h1>
+                <h1>YanZeKim</h1>
             </a>
             <nav class="nav">
                 <ul>
