--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="font/iconfont.css" />
     <link rel="stylesheet" href="font1/iconfont.css" />
     <link rel="stylesheet" href="css.css" />
-    <title>崽崽</title>
+    <title>igu</title>
 </head>
 
 <body>
